--- a/config/production.yaml
+++ b/config/production.yaml
@@ -1,3 +1,3 @@
-MONGO_URI: 'mongodb://localhost:27017/kryptosmobile'
+MONGO_URI: 'mongodb://localhost:27017/test'
 
 secretKey: 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9'
