--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-jwt": "^5.3.0",
     "hbs": "^4.0.1",
     "js-yaml": "^3.8.4",
     "jsonwebtoken": "^7.4.1",
